2001-04-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (init): Made it so that the same Factory
	instance can be reused for download different sets of comics.
	* Makefile (POD2MANRULES,POD2HTMLRULES): Added these rules to
	produce the manpages & html pages for the pod files.  Generalized
	the rules for producing man & html pages.
	(remake_check): Changed to simply run make distclean to remove the
	files that need to be regenerated.

2001-04-27  Elliot Glaysher  <nuriko.chan@home.com>

	* netcomics, show_comics -> doc/netcomics.pod, show_comics.pod:
	Moved docs to there own files
	
2001-04-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (SUBPATHS): Added replacing OLDMODULES, VERSION, and
	PKGVERSION.
	* netcomics.spec (%files): added /etc/netcomicsrc
	(%post data): changed OLDMODULES to be automatically replaced
	* Netcomics/Factory.pm (get_comics): Reverted code that creates
	the subdir name back to what it was before.

2001-04-26  Elliot Glaysher  <nuriko.chan@home.com>

	* Makefile (install): Fixed problems installing /etc/netomicsrc
	when packaging.
	* debian/conffiles: Added newline at the end of the file so debhelper
	doesn't barf on reading it.
	* debian/rules: Redefined PERLINSTDIR so that it places *.pm in a 
	places that Debian's perl looks for them.
	* Makefile (distclean): Added statement to remove manpages from the
	debian/ directory, where they are dumped before moving into the 
	packages.
	* Netcomics/Factory.pm (get_comics): Fixed bug that caused a directory
	to be created for EACH file.
	* debian/control: Fixed dependencies.
	* debian/netcomics.dirs: Removed old man instalation. Man page 
	installation is now done by dpkg.
	* debian/netcomics.files: Removed old man stuff, and explicitly
	declared "binaries"
	* debian/rules: We now use dh_installman to install the man pages
	instead of doing it man-ually. (pun intended.) Changed "make clean"